# WhatWasThat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  app_info.rs  cache.rs  clipboard.rs  commands.rs  crypto.rs  database.rs  llm.rs  main.rs  masking.rs  models.rs  ocr.rs  phash.rs  queue.rs  tests.rs  undo.rs  wwt.rs
src/components/: CategoryManager.tsx  FilterPanel.tsx  Lightbox.tsx  Navbar.tsx  ScreenshotCard.tsx  ScreenshotDetail.tsx  SettingsPanel.tsx  Sidebar.tsx  Titlebar.tsx  ToastManager.tsx
src/i18n/: translations.ts
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
src/views/: Gallery.tsx  StatsView.tsx
whatwasthat-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
