[package]
name = "whatwasthat"
version = "1.0.0"
description = "Smart Screenshot Archiver with OCR + LLM"
authors = ["WhatWasThat"]
license-file = "../docs/LICENSE.md"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open", "system-tray", "window-close", "window-hide", "window-show",
    "window-set-focus", "window-maximize", "window-minimize", "window-unmaximize",
    "window-start-dragging", "notification-all",
] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",    features = ["full"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
image       = "0.25"
arboard     = "3"
base64      = "0.22"
chrono      = { version = "0.4",  features = ["serde"] }
uuid        = { version = "1",    features = ["v4"] }
log         = "0.4"
env_logger  = "0.11"
dashmap     = "6"
aes-gcm     = "0.10"
rand        = "0.8"
zeroize     = { version = "1", features = ["derive"] }
sha2        = "0.10"
pbkdf2      = { version = "0.12", features = ["simple"] }
hmac        = "0.12"
hex         = "0.4"
argon2      = "0.5"
zip         = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg      = "0.52"
windows = { version = "0.57", features = [
    "Win32_Foundation", "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading", "Win32_System_ProcessStatus",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
